{
  "version": 4,
  "terraform_version": "1.7.1",
  "serial": 12,
  "lineage": "18816f21-2809-7a67-60e6-39036833d17a",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "nixos",
      "provider": "provider[\"registry.opentofu.org/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address": "34.0.48.251",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2026-08-14T16:13:33.512-07:00",
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "id": "projects/project-1ab07399-29ab-4352-8f8/regions/southamerica-west1/addresses/santiago0-ip",
            "label_fingerprint": "vezUS-42LLM=",
            "name": "santiago0-ip",
            "network_tier": "STANDARD",
            "prefix_length": 0,
            "project": "project-1ab07399-29ab-4352-8f8",
            "region": "southamerica-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-1ab07399-29ab-4352-8f8/regions/southamerica-west1/addresses/santiago0-ip",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "users": [
              "https://www.googleapis.com/compute/v1/projects/project-1ab07399-29ab-4352-8f8/zones/southamerica-west1-a/instances/santiago0"
            ]
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "address": "34.0.50.126",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2026-08-14T16:13:59.068-07:00",
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "id": "projects/project-1ab07399-29ab-4352-8f8/regions/southamerica-west1/addresses/santiago1-ip",
            "label_fingerprint": "vezUS-42LLM=",
            "name": "santiago1-ip",
            "network_tier": "STANDARD",
            "prefix_length": 0,
            "project": "project-1ab07399-29ab-4352-8f8",
            "region": "southamerica-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-1ab07399-29ab-4352-8f8/regions/southamerica-west1/addresses/santiago1-ip",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "users": [
              "https://www.googleapis.com/compute/v1/projects/project-1ab07399-29ab-4352-8f8/zones/southamerica-west1-b/instances/santiago1"
            ]
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "address": "34.0.54.123",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2026-08-14T16:14:10.255-07:00",
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "id": "projects/project-1ab07399-29ab-4352-8f8/regions/southamerica-west1/addresses/santiago2-ip",
            "label_fingerprint": "vezUS-42LLM=",
            "name": "santiago2-ip",
            "network_tier": "STANDARD",
            "prefix_length": 0,
            "project": "project-1ab07399-29ab-4352-8f8",
            "region": "southamerica-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-1ab07399-29ab-4352-8f8/regions/southamerica-west1/addresses/santiago2-ip",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "users": [
              "https://www.googleapis.com/compute/v1/projects/project-1ab07399-29ab-4352-8f8/zones/southamerica-west1-c/instances/santiago2"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_icmp",
      "provider": "provider[\"registry.opentofu.org/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2026-08-14T16:14:48.853-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/project-1ab07399-29ab-4352-8f8/global/firewalls/santiago-allow-icmp",
            "log_config": [],
            "name": "santiago-allow-icmp",
            "network": "https://www.googleapis.com/compute/v1/projects/project-1ab07399-29ab-4352-8f8/global/networks/santiago-vpc",
            "params": [],
            "priority": 1000,
            "project": "project-1ab07399-29ab-4352-8f8",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-1ab07399-29ab-4352-8f8/global/firewalls/santiago-allow-icmp",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "santiago-ssh"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.nixos"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh",
      "provider": "provider[\"registry.opentofu.org/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "2409"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-08-14T16:15:03.215-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/project-1ab07399-29ab-4352-8f8/global/firewalls/santiago-allow-ssh",
            "log_config": [],
            "name": "santiago-allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/project-1ab07399-29ab-4352-8f8/global/networks/santiago-vpc",
            "params": [],
            "priority": 1000,
            "project": "project-1ab07399-29ab-4352-8f8",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-1ab07399-29ab-4352-8f8/global/firewalls/santiago-allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "santiago-ssh"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.nixos"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "nixos",
      "provider": "provider[\"registry.opentofu.org/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": false,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "force_attach": false,
                "guest_os_features": [
                  "VIRTIO_SCSI_MULTIQUEUE",
                  "SEV_CAPABLE",
                  "SEV_SNP_CAPABLE",
                  "SEV_LIVE_MIGRATABLE",
                  "SEV_LIVE_MIGRATABLE_V2",
                  "SNP_SVSM_CAPABLE",
                  "IDPF",
                  "TDX_CAPABLE",
                  "UEFI_COMPATIBLE",
                  "GVNIC"
                ],
                "initialize_params": [
                  {
                    "architecture": "X86_64",
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2604-resolute-amd64-v20260811",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 25,
                    "type": "pd-balanced"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/project-1ab07399-29ab-4352-8f8/zones/southamerica-west1-a/disks/santiago0"
              }
            ],
            "can_ip_forward": true,
            "cpu_platform": "AMD Milan",
            "creation_timestamp": "2026-08-14T16:17:31.978-07:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true",
              "os": "ubuntu",
              "pricing": "spot"
            },
            "enable_display": false,
            "id": "projects/project-1ab07399-29ab-4352-8f8/zones/southamerica-west1-a/instances/santiago0",
            "instance_id": "526699680857464036",
            "label_fingerprint": "VBV2GwdJqMo=",
            "labels": {
              "os": "ubuntu",
              "pricing": "spot"
            },
            "machine_type": "t2d-standard-1",
            "metadata": {
              "block-project-ssh-keys": "TRUE",
              "enable-oslogin": "TRUE",
              "serial-port-enable": "TRUE",
              "shutdown-script": "#!/usr/bin/env bash\nset -euo pipefail\necho \"[gce-spot] shutdown/preemption notice at $(date --iso-8601=seconds)\" | systemd-cat -t gce-spot-shutdown || true\nsync || true\n",
              "user-data": "#cloud-config\npackage_update: true\npackage_upgrade: true\nhostname: santiago0\n\nusers:\n  - name: root\n    ssh_authorized_keys:\n      - \n\nssh_pwauth: true\nchpasswd:\n  list:\n    - root:Senha171\n  expire: false\n\nwrite_files:\n  - path: /etc/sysctl.d/99-kubernetes.conf\n    permissions: '0644'\n    content: |\n      net.ipv4.ip_forward = 1\n      fs.inotify.max_user_instances = 512\n      fs.inotify.max_user_watches = 524288\n      net.bridge.bridge-nf-call- [...]
            },
            "metadata_fingerprint": "Q-MA6CVRoNU=",
            "name": "santiago0",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.0.48.251",
                    "network_tier": "STANDARD"
                  }
                ],
                "alias_ip_range": [
                  {
                    "ip_cidr_range": "10.42.0.16/28"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/project-1ab07399-29ab-4352-8f8/global/networks/santiago-vpc",
                "network_ip": "10.42.0.4",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/project-1ab07399-29ab-4352-8f8/regions/southamerica-west1/subnetworks/santiago-subnet",
                "subnetwork_project": "project-1ab07399-29ab-4352-8f8"
              }
            ],
            "project": "project-1ab07399-29ab-4352-8f8",
            "scheduling": [
              {
                "automatic_restart": false,
                "availability_domain": 0,
                "instance_termination_action": "STOP",
                "min_node_cpus": 0,
                "on_host_maintenance": "TERMINATE",
                "preemptible": true,
                "provisioning_model": "SPOT"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-1ab07399-29ab-4352-8f8/zones/southamerica-west1-a/instances/santiago0",
            "service_account": [
              {
                "email": "tofunix@project-1ab07399-29ab-4352-8f8.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "http-server",
              "https-server",
              "santiago-ssh"
            ],
            "tags_fingerprint": "RX8_fGIN82c=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true",
              "os": "ubuntu",
              "pricing": "spot"
            },
            "zone": "southamerica-west1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "metadata"
              },
              {
                "type": "index",
                "value": {
                  "value": "user-data",
                  "type": "string"
                }
              }
            ]
          ],
          "dependencies": [
            "data.google_compute_image.nixos",
            "data.google_compute_zones.available",
            "google_compute_address.nixos",
            "google_compute_firewall.allow_ssh",
            "google_compute_network.nixos",
            "google_compute_subnetwork.nixos"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": false,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "force_attach": false,
                "guest_os_features": [
                  "VIRTIO_SCSI_MULTIQUEUE",
                  "SEV_CAPABLE",
                  "SEV_SNP_CAPABLE",
                  "SEV_LIVE_MIGRATABLE",
                  "SEV_LIVE_MIGRATABLE_V2",
                  "SNP_SVSM_CAPABLE",
                  "IDPF",
                  "TDX_CAPABLE",
                  "UEFI_COMPATIBLE",
                  "GVNIC"
                ],
                "initialize_params": [
                  {
                    "architecture": "X86_64",
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2604-resolute-amd64-v20260811",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 25,
                    "type": "pd-balanced"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/project-1ab07399-29ab-4352-8f8/zones/southamerica-west1-b/disks/santiago1"
              }
            ],
            "can_ip_forward": true,
            "cpu_platform": "AMD Milan",
            "creation_timestamp": "2026-08-14T16:17:14.930-07:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true",
              "os": "ubuntu",
              "pricing": "spot"
            },
            "enable_display": false,
            "id": "projects/project-1ab07399-29ab-4352-8f8/zones/southamerica-west1-b/instances/santiago1",
            "instance_id": "8502552557683613461",
            "label_fingerprint": "VBV2GwdJqMo=",
            "labels": {
              "os": "ubuntu",
              "pricing": "spot"
            },
            "machine_type": "t2d-standard-1",
            "metadata": {
              "block-project-ssh-keys": "TRUE",
              "enable-oslogin": "TRUE",
              "serial-port-enable": "TRUE",
              "shutdown-script": "#!/usr/bin/env bash\nset -euo pipefail\necho \"[gce-spot] shutdown/preemption notice at $(date --iso-8601=seconds)\" | systemd-cat -t gce-spot-shutdown || true\nsync || true\n",
              "user-data": "#cloud-config\npackage_update: true\npackage_upgrade: true\nhostname: santiago1\n\nusers:\n  - name: root\n    ssh_authorized_keys:\n      - \n\nssh_pwauth: true\nchpasswd:\n  list:\n    - root:Senha171\n  expire: false\n\nwrite_files:\n  - path: /etc/sysctl.d/99-kubernetes.conf\n    permissions: '0644'\n    content: |\n      net.ipv4.ip_forward = 1\n      fs.inotify.max_user_instances = 512\n      fs.inotify.max_user_watches = 524288\n      net.bridge.bridge-nf-call- [...]
            },
            "metadata_fingerprint": "7ErB_GJSxVc=",
            "name": "santiago1",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.0.50.126",
                    "network_tier": "STANDARD"
                  }
                ],
                "alias_ip_range": [
                  {
                    "ip_cidr_range": "10.42.0.32/28"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/project-1ab07399-29ab-4352-8f8/global/networks/santiago-vpc",
                "network_ip": "10.42.0.3",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/project-1ab07399-29ab-4352-8f8/regions/southamerica-west1/subnetworks/santiago-subnet",
                "subnetwork_project": "project-1ab07399-29ab-4352-8f8"
              }
            ],
            "project": "project-1ab07399-29ab-4352-8f8",
            "scheduling": [
              {
                "automatic_restart": false,
                "availability_domain": 0,
                "instance_termination_action": "STOP",
                "min_node_cpus": 0,
                "on_host_maintenance": "TERMINATE",
                "preemptible": true,
                "provisioning_model": "SPOT"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-1ab07399-29ab-4352-8f8/zones/southamerica-west1-b/instances/santiago1",
            "service_account": [
              {
                "email": "tofunix@project-1ab07399-29ab-4352-8f8.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "http-server",
              "https-server",
              "santiago-ssh"
            ],
            "tags_fingerprint": "RX8_fGIN82c=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true",
              "os": "ubuntu",
              "pricing": "spot"
            },
            "zone": "southamerica-west1-b"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "metadata"
              },
              {
                "type": "index",
                "value": {
                  "value": "user-data",
                  "type": "string"
                }
              }
            ]
          ],
          "dependencies": [
            "data.google_compute_image.nixos",
            "data.google_compute_zones.available",
            "google_compute_address.nixos",
            "google_compute_firewall.allow_ssh",
            "google_compute_network.nixos",
            "google_compute_subnetwork.nixos"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": false,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "force_attach": false,
                "guest_os_features": [
                  "VIRTIO_SCSI_MULTIQUEUE",
                  "SEV_CAPABLE",
                  "SEV_SNP_CAPABLE",
                  "SEV_LIVE_MIGRATABLE",
                  "SEV_LIVE_MIGRATABLE_V2",
                  "SNP_SVSM_CAPABLE",
                  "IDPF",
                  "TDX_CAPABLE",
                  "UEFI_COMPATIBLE",
                  "GVNIC"
                ],
                "initialize_params": [
                  {
                    "architecture": "X86_64",
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2604-resolute-amd64-v20260811",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 25,
                    "type": "pd-balanced"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/project-1ab07399-29ab-4352-8f8/zones/southamerica-west1-c/disks/santiago2"
              }
            ],
            "can_ip_forward": true,
            "cpu_platform": "AMD Milan",
            "creation_timestamp": "2026-08-14T16:16:57.804-07:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true",
              "os": "ubuntu",
              "pricing": "spot"
            },
            "enable_display": false,
            "id": "projects/project-1ab07399-29ab-4352-8f8/zones/southamerica-west1-c/instances/santiago2",
            "instance_id": "602479873374691078",
            "label_fingerprint": "VBV2GwdJqMo=",
            "labels": {
              "os": "ubuntu",
              "pricing": "spot"
            },
            "machine_type": "t2d-standard-1",
            "metadata": {
              "block-project-ssh-keys": "TRUE",
              "enable-oslogin": "TRUE",
              "serial-port-enable": "TRUE",
              "shutdown-script": "#!/usr/bin/env bash\nset -euo pipefail\necho \"[gce-spot] shutdown/preemption notice at $(date --iso-8601=seconds)\" | systemd-cat -t gce-spot-shutdown || true\nsync || true\n",
              "user-data": "#cloud-config\npackage_update: true\npackage_upgrade: true\nhostname: santiago2\n\nusers:\n  - name: root\n    ssh_authorized_keys:\n      - \n\nssh_pwauth: true\nchpasswd:\n  list:\n    - root:Senha171\n  expire: false\n\nwrite_files:\n  - path: /etc/sysctl.d/99-kubernetes.conf\n    permissions: '0644'\n    content: |\n      net.ipv4.ip_forward = 1\n      fs.inotify.max_user_instances = 512\n      fs.inotify.max_user_watches = 524288\n      net.bridge.bridge-nf-call- [...]
            },
            "metadata_fingerprint": "cmN2VvFDU0Y=",
            "name": "santiago2",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.0.54.123",
                    "network_tier": "STANDARD"
                  }
                ],
                "alias_ip_range": [
                  {
                    "ip_cidr_range": "10.42.0.48/28"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/project-1ab07399-29ab-4352-8f8/global/networks/santiago-vpc",
                "network_ip": "10.42.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/project-1ab07399-29ab-4352-8f8/regions/southamerica-west1/subnetworks/santiago-subnet",
                "subnetwork_project": "project-1ab07399-29ab-4352-8f8"
              }
            ],
            "project": "project-1ab07399-29ab-4352-8f8",
            "scheduling": [
              {
                "automatic_restart": false,
                "availability_domain": 0,
                "instance_termination_action": "STOP",
                "min_node_cpus": 0,
                "on_host_maintenance": "TERMINATE",
                "preemptible": true,
                "provisioning_model": "SPOT"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-1ab07399-29ab-4352-8f8/zones/southamerica-west1-c/instances/santiago2",
            "service_account": [
              {
                "email": "tofunix@project-1ab07399-29ab-4352-8f8.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "http-server",
              "https-server",
              "santiago-ssh"
            ],
            "tags_fingerprint": "RX8_fGIN82c=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true",
              "os": "ubuntu",
              "pricing": "spot"
            },
            "zone": "southamerica-west1-c"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "metadata"
              },
              {
                "type": "index",
                "value": {
                  "value": "user-data",
                  "type": "string"
                }
              }
            ]
          ],
          "dependencies": [
            "data.google_compute_image.nixos",
            "data.google_compute_zones.available",
            "google_compute_address.nixos",
            "google_compute_firewall.allow_ssh",
            "google_compute_network.nixos",
            "google_compute_subnetwork.nixos"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "nixos",
      "provider": "provider[\"registry.opentofu.org/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "bgp_always_compare_med": false,
            "bgp_best_path_selection_mode": "LEGACY",
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/project-1ab07399-29ab-4352-8f8/global/networks/santiago-vpc",
            "mtu": 0,
            "name": "santiago-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "network_id": "7560245344350642119",
            "numeric_id": "7560245344350642119",
            "project": "project-1ab07399-29ab-4352-8f8",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-1ab07399-29ab-4352-8f8/global/networks/santiago-vpc"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "nixos",
      "provider": "provider[\"registry.opentofu.org/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-08-14T16:14:24.926-07:00",
            "enable_flow_logs": false,
            "gateway_address": "10.42.0.1",
            "id": "projects/project-1ab07399-29ab-4352-8f8/regions/southamerica-west1/subnetworks/santiago-subnet",
            "ip_cidr_range": "10.42.0.0/24",
            "name": "santiago-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/project-1ab07399-29ab-4352-8f8/global/networks/santiago-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "project-1ab07399-29ab-4352-8f8",
            "purpose": "PRIVATE",
            "region": "southamerica-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-1ab07399-29ab-4352-8f8/regions/southamerica-west1/subnetworks/santiago-subnet",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": 3672343589692776383
          },
          "dependencies": [
            "google_compute_network.nixos"
          ]
        }
      ]
    }
  ]
}